# TueSan

./: CHANGELOG.md  README.md  analysis.py  bad_data.txt  conllu_parser.py  conllu_reader.py  literature.md  logger.py  meetings.md  prepare_data.py  pyproject.toml  reconstruct.py  task1.py  utils.py
Task1/: config.cfg  config.py  dataset.py  evaluate_t1_checkpoint.py  generate_dataset.py  generate_train_data.py  helpers.py  main.py  main_ray.py  mlp.py  model.py  playy.py  predicting.py  reconstruct_translit.py  reconstruct_uni.py  sandhi.py  sandhi_test.py  scoring.py  segmenter_model.py  subword.py  training.py  uni2intern.py  vocabulary.py
Task1/deprecated/: dataset.py  sandhi.py  sandhi_test.py  vocabulary.py
Task1/tune/: main.py  main_ray.py  model.py  training.py
Task2/: attention.py  config.cfg  dataset.py  decoders.py  decoding.py  encoder.py  evaluate.py  helpers.py  loss.py  main.py  model.py  morph_test.ipynb  training.py  vocabulary.py
Task2/RuleClassification/: attention.py  char2token.py  config.cfg  config.py  conv_ngram_encoder.py  dataset.py  decoders.py  decoding.py  encoder.py  evaluate.py  evaluate_checkpoint.py  evaluate_t2_checkpoint.py  extract_rules.py  generate_dataset.py  helpers.py  index_dataset.py  loss.py  main.py  main_ray.py  mlp.py  model.py  scoring.py  stemming_rules.py  training.py  vocabulary.py
Task2/RuleTune/: main_ray.py  model.py  training.py
Task2/Seq2Seq-Decoding/: mlp.py  (+16 more)
Task3/: generate_dataset.py  index_dataset.py  main.py  predicting.py  reconstruct_translit.py  segmenter_model.py  stemming_rules.py  training.py
(+31 files in other folders)
