[tool.poetry]
name = "tuesan"
version = "0.1.0"
description = "Word Segmentation and Morphological Parsing Sanskrit"
authors = ["Leander Girrbach, Jingwen Li"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
torch = "^1.10.0"
networkx = "^2.6.3"
edit-distance = "^1.0.4"
editdistance = "^0.6.0"
tqdm = "^4.62.3"
rich = "^10.12.0"
numpy = "^1.21.3"
sklearn = "^0.0"
ray = "^1.8.0"

[tool.poetry.dev-dependencies]
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
